--- a/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
@@ -97,17 +97,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Your code here\n",
     "tup = (\"I\",)\n",
@@ -120,10 +112,10 @@
     "\n",
     "tup = tuple(lista1)\n",
     "\n",
-    "print(tup)\n",
+    "\n",
     "# Your explanation here\n",
     "\n",
-    "Primero converti la tupla en lista y le agregue los elementos, despues lo volvi a convertir en tupla"
+    "#Primero converti la tupla en lista y le agregue los elementos, despues lo volvi a convertir en tupla"
    ]
   },
   {
@@ -141,11 +133,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n')\n",
+      "('h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup1 = (tup[:4])\n",
+    "tup2 = (tup[4:])\n",
+    "print(tup1)\n",
+    "print(tup2)"
    ]
   },
   {
@@ -159,11 +164,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup3 = tup1 + tup2\n",
+    "\n",
+    "print (tup3)\n"
    ]
   },
   {
@@ -175,11 +191,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "x = len(tup1)\n",
+    "y = len(tup2)\n",
+    "x + y == len(tup3)"
    ]
   },
   {
@@ -191,11 +221,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(tup3.index(\"h\"))"
    ]
   },
   {
@@ -215,11 +254,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "\n",
+    "for e in letters:\n",
+    "    if e in tup3:\n",
+    "        print(True)\n",
+    "    else:\n",
+    "        print(False)\n",
+    "    \n",
+    "\n"
    ]
   },
   {
@@ -233,12 +293,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a:1\n",
+      "b:0\n",
+      "c:1\n",
+      "d:0\n",
+      "e:0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "for e in letters:\n",
+    "    if e in tup3:\n",
+    "        print(\"{}:{}\" .format(e,(tup3.count(e))))\n",
+    "    else:\n",
+    "        print((\"{}:{}\" .format(e,(tup3.count(e)))))\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
