--- a/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -84,15 +84,24 @@
     "\n",
     "l= list(tup)\n",
     "\n",
-    "tup1 = l + items\n",
+    "tup = l + items\n",
     "\n",
-    "T=tuple(tup1)\n",
+    "T=tuple(tup)\n",
     "print(T)\n",
     "\n",
     "\n",
-    "\n",
-    "# Your explanation here\n"
+    "# Your explanation here\n",
+    "# como una tupla es inmutable, la pasamos a lista y una vez hecha una lista\n",
+    "# se hace cualquier cambio y se vuelve a pasar a lista\n",
+    "#\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -109,11 +118,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('r', 'o', 'n', 'h', 'a', 'c')\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
+    "tup = (\"r\", \"o\", \"n\", \"h\", \"a\", \"c\",)\n",
+    "       \n",
+    "print(tup)\n",
     "\n",
     "# Your explanation here\n"
    ]
@@ -133,12 +153,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n')\n",
+      "('h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
-    "\n"
+    "tup = ('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n",
+    "\n",
+    "tup1 = (tup[:4])\n",
+    "tup2 = (tup[4:8])\n",
+    "\n",
+    "print(tup1)\n",
+    "print(tup2)\n"
    ]
   },
   {
@@ -152,11 +187,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup3 = tup1 + tup2\n",
+    "\n",
+    "print(tup3)\n"
    ]
   },
   {
@@ -168,11 +214,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ok\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "if (len(tup1)) + (len(tup2)) == len(tup3):\n",
+    "    print (\"ok\")\n"
    ]
   },
   {
@@ -184,11 +241,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(tup3.index('h'))\n"
    ]
   },
   {
@@ -208,11 +274,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true\n",
+      "false\n",
+      "true\n",
+      "false\n",
+      "false\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "\n",
+    "for e in letters:\n",
+    "    if e in tup3:\n",
+    "        print(\"true\")\n",
+    "       \n",
+    "    else:\n",
+    "        print(\"false\")\n"
    ]
   },
   {
@@ -226,12 +312,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a se repite 1\n",
+      "b se repite 0\n",
+      "c se repite 1\n",
+      "d se repite 0\n",
+      "e se repite 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "tuc3 = ('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n",
+    "nu = 0\n",
+    "for e in letters:\n",
+    "    a = tuc3.count(e)\n",
+    "    print(str(e)+ \" se repite \"+ str(a))   \n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
