--- a/module-1/lab-tuple-set-dict/your-code/challenge-3.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-3.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,11 +49,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 8, 'about': 1, 'all': 1, 'although': 3, 'and': 23, 'are': 1, 'at': 1, 'baby': 14, 'backseat': 1, 'bag': 1, 'bar': 1, 'be': 16, 'bedsheets': 3, 'begin': 1, 'best': 1, 'body': 17, 'boy': 2, 'brand': 6, 'can': 1, 'chance': 1, 'club': 1, 'come': 37, 'conversation': 1, 'crazy': 2, 'dance': 1, 'date': 1, 'day': 6, 'discovering': 6, 'do': 3, 'doing': 2, \"don't\": 2, 'drinking': 1, 'driver': 1, 'eat': 1, 'every': 6, 'falling': 3, 'family': 1, 'fast': 1, 'fill': 2, 'find': 1, 'first': 1, 'follow': 6, 'for': 3, 'friends': 1, 'get': 1, 'girl': 2, 'give': 1, 'go': 2, 'going': 1, 'grab': 2, 'hand': 1, 'handmade': 2, 'heart': 3, 'hours': 2, 'how': 1, 'i': 6, \"i'll\": 1, \"i'm\": 23, 'in': 27, 'is': 5, \"isn't\": 1, 'it': 1, 'jukebox': 1, 'just': 1, 'kiss': 1, 'know': 2, 'last': 3, 'lead': 6, 'leave': 1, 'let': 1, \"let's\": 2, 'like': 10, 'love': 25, 'lover': 1, 'magnet': 3, 'make': 1, 'man': 1, 'may': 2, 'me': 10, 'mind': 2, 'much': 2, 'my': 33, 'new': 6, 'night': 3, 'not': 2, 'now': 11, 'of': 6, 'okay': 1, 'on': 40, 'one': 1, 'our': 1, 'out': 1, 'over': 1, 'place': 1, 'plate': 1, 'play': 1, 'pull': 3, 'push': 3, 'put': 3, 'radio': 1, 'room': 3, 'say': 2, 'shape': 6, 'shots': 1, 'singing': 2, 'slow': 1, 'smell': 3, 'so': 2, 'somebody': 2, 'something': 6, 'sour': 1, 'start': 2, 'stop': 1, 'story': 1, 'sweet': 1, 'table': 1, 'take': 1, 'talk': 4, 'taxi': 1, 'tell': 1, 'that': 2, 'the': 18, 'then': 3, 'thrifty': 1, 'to': 2, 'too': 5, 'trust': 1, 'up': 3, 'van': 1, 'waist': 2, 'want': 2, 'was': 2, 'we': 7, \"we're\": 1, 'week': 1, 'were': 3, 'where': 1, 'with': 22, 'you': 16, 'your': 21}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "keys = list(word_freq.keys())\n",
+    "keys.sort()\n",
+    "word_freq2 = {}\n",
+    "for e in keys:\n",
+    "    word_freq2[e]=word_freq[e];\n",
+    "    \n",
+    "print(word_freq2)\n",
+    "\n"
    ]
   },
   {
@@ -90,11 +106,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'conversation': 1, \"we're\": 1, 'plate': 1, 'sour': 1, 'jukebox': 1, 'taxi': 1, 'fast': 1, 'bag': 1, 'man': 1, 'going': 1, 'one': 1, 'backseat': 1, 'friends': 1, 'take': 1, 'play': 1, 'okay': 1, 'begin': 1, 'over': 1, 'just': 1, 'are': 1, 'tell': 1, 'drinking': 1, 'our': 1, 'where': 1, \"i'll\": 1, 'all': 1, \"isn't\": 1, 'make': 1, 'lover': 1, 'get': 1, 'radio': 1, 'give': 1, 'can': 1, 'club': 1, 'it': 1, 'out': 1, 'chance': 1, 'first': 1, 'table': 1, 'thrifty': 1, 'driver': 1, 'slow': 1, 'dance': 1, 'trust': 1, 'family': 1, 'week': 1, 'date': 1, 'leave': 1, 'at': 1, 'hand': 1, 'how': 1, 'eat': 1, 'about': 1, 'story': 1, 'sweet': 1, 'best': 1, 'let': 1, 'van': 1, 'shots': 1, 'place': 1, 'find': 1, 'kiss': 1, 'stop': 1, 'bar': 1, \"don't\": 2, 'mind': 2, 'know': 2, 'so': 2, 'start': 2, 'boy': 2, 'girl': 2, 'singing': 2, 'doing': 2, 'somebody': 2, 'handmade': 2, 'may': 2, 'that': 2, 'much': 2, 'grab': 2, 'was': 2, 'say': 2, 'waist': 2, 'want': 2, \"let's\": 2, 'not': 2, 'crazy': 2, 'go': 2, 'to': 2, 'fill': 2, 'hours': 2, 'push': 3, 'then': 3, 'put': 3, 'room': 3, 'magnet': 3, 'up': 3, 'pull': 3, 'last': 3, 'do': 3, 'smell': 3, 'although': 3, 'falling': 3, 'were': 3, 'night': 3, 'heart': 3, 'for': 3, 'bedsheets': 3, 'talk': 4, 'too': 5, 'is': 5, 'every': 6, 'new': 6, 'follow': 6, 'brand': 6, 'of': 6, 'i': 6, 'day': 6, 'lead': 6, 'shape': 6, 'discovering': 6, 'something': 6, 'we': 7, 'a': 8, 'like': 10, 'me': 10, 'now': 11, 'baby': 14, 'you': 16, 'be': 16, 'body': 17, 'the': 18, 'your': 21, 'with': 22, \"i'm\": 23, 'and': 23, 'love': 25, 'in': 27, 'my': 33, 'come': 37, 'on': 40}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "import operator\n",
+    "sorted_tups = sorted(word_freq.items(), key=operator.itemgetter(1))\n",
+    "word_freq2={}\n",
+    "for e in sorted_tups:\n",
+    "    word_freq2[e[0]]=e[1]\n",
+    "        \n",
+    "print(word_freq2)"
    ]
   },
   {
@@ -110,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,11 +163,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             word  freq\n",
+      "0            love    25\n",
+      "1    conversation     1\n",
+      "2           every     6\n",
+      "3           we're     1\n",
+      "4           plate     1\n",
+      "5            sour     1\n",
+      "6         jukebox     1\n",
+      "7             now    11\n",
+      "8            taxi     1\n",
+      "9            fast     1\n",
+      "10            bag     1\n",
+      "11            man     1\n",
+      "12           push     3\n",
+      "13           baby    14\n",
+      "14          going     1\n",
+      "15            you    16\n",
+      "16          don't     2\n",
+      "17            one     1\n",
+      "18           mind     2\n",
+      "19       backseat     1\n",
+      "20        friends     1\n",
+      "21           then     3\n",
+      "22           know     2\n",
+      "23           take     1\n",
+      "24           play     1\n",
+      "25           okay     1\n",
+      "26             so     2\n",
+      "27          begin     1\n",
+      "28          start     2\n",
+      "29           over     1\n",
+      "..            ...   ...\n",
+      "110         story     1\n",
+      "111         sweet     1\n",
+      "112          best     1\n",
+      "113         crazy     2\n",
+      "114           let     1\n",
+      "115           too     5\n",
+      "116           van     1\n",
+      "117         shots     1\n",
+      "118            go     2\n",
+      "119            to     2\n",
+      "120             a     8\n",
+      "121            my    33\n",
+      "122            is     5\n",
+      "123         place     1\n",
+      "124          find     1\n",
+      "125         shape     6\n",
+      "126            on    40\n",
+      "127          kiss     1\n",
+      "128          were     3\n",
+      "129         night     3\n",
+      "130         heart     3\n",
+      "131           for     3\n",
+      "132   discovering     6\n",
+      "133     something     6\n",
+      "134            be    16\n",
+      "135     bedsheets     3\n",
+      "136          fill     2\n",
+      "137         hours     2\n",
+      "138          stop     1\n",
+      "139           bar     1\n",
+      "\n",
+      "[140 rows x 2 columns]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "df=pd.DataFrame(word_freq.items(), columns=['word','freq'])\n",
+    "print(df)"
    ]
   },
   {
@@ -150,11 +254,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             word  freq\n",
+      "120             a     8\n",
+      "109         about     1\n",
+      "43            all     1\n",
+      "96       although     3\n",
+      "72            and    23\n",
+      "34            are     1\n",
+      "102            at     1\n",
+      "13           baby    14\n",
+      "19       backseat     1\n",
+      "10            bag     1\n",
+      "139           bar     1\n",
+      "134            be    16\n",
+      "135     bedsheets     3\n",
+      "27          begin     1\n",
+      "112          best     1\n",
+      "30           body    17\n",
+      "31            boy     2\n",
+      "67          brand     6\n",
+      "52            can     1\n",
+      "63         chance     1\n",
+      "55           club     1\n",
+      "56           come    37\n",
+      "1    conversation     1\n",
+      "113         crazy     2\n",
+      "84          dance     1\n",
+      "90           date     1\n",
+      "95            day     6\n",
+      "132   discovering     6\n",
+      "92             do     3\n",
+      "53          doing     2\n",
+      "..            ...   ...\n",
+      "5            sour     1\n",
+      "28          start     2\n",
+      "138          stop     1\n",
+      "110         story     1\n",
+      "111         sweet     1\n",
+      "75          table     1\n",
+      "23           take     1\n",
+      "105          talk     4\n",
+      "8            taxi     1\n",
+      "36           tell     1\n",
+      "68           that     2\n",
+      "85            the    18\n",
+      "21           then     3\n",
+      "79        thrifty     1\n",
+      "119            to     2\n",
+      "115           too     5\n",
+      "87          trust     1\n",
+      "70             up     3\n",
+      "116           van     1\n",
+      "93          waist     2\n",
+      "99           want     2\n",
+      "81            was     2\n",
+      "33             we     7\n",
+      "3           we're     1\n",
+      "89           week     1\n",
+      "128          were     3\n",
+      "41          where     1\n",
+      "54           with    22\n",
+      "15            you    16\n",
+      "97           your    21\n",
+      "\n",
+      "[140 rows x 2 columns]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "df2=df.sort_values(by=['word'])\n",
+    "print(df2)"
    ]
   },
   {
@@ -166,11 +343,93 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            word  freq\n",
+      "139          bar     1\n",
+      "114          let     1\n",
+      "116          van     1\n",
+      "60           out     1\n",
+      "57            it     1\n",
+      "117        shots     1\n",
+      "55          club     1\n",
+      "52           can     1\n",
+      "63        chance     1\n",
+      "123        place     1\n",
+      "48         radio     1\n",
+      "46         lover     1\n",
+      "45          make     1\n",
+      "44         isn't     1\n",
+      "43           all     1\n",
+      "42          i'll     1\n",
+      "41         where     1\n",
+      "49          give     1\n",
+      "40           our     1\n",
+      "112         best     1\n",
+      "138         stop     1\n",
+      "102           at     1\n",
+      "90          date     1\n",
+      "89          week     1\n",
+      "88        family     1\n",
+      "87         trust     1\n",
+      "103         hand     1\n",
+      "84         dance     1\n",
+      "111        sweet     1\n",
+      "83          slow     1\n",
+      "..           ...   ...\n",
+      "133    something     6\n",
+      "132  discovering     6\n",
+      "61           new     6\n",
+      "67         brand     6\n",
+      "2          every     6\n",
+      "74            of     6\n",
+      "78             i     6\n",
+      "101         lead     6\n",
+      "95           day     6\n",
+      "64        follow     6\n",
+      "125        shape     6\n",
+      "33            we     7\n",
+      "120            a     8\n",
+      "51          like    10\n",
+      "91            me    10\n",
+      "7            now    11\n",
+      "13          baby    14\n",
+      "15           you    16\n",
+      "134           be    16\n",
+      "30          body    17\n",
+      "85           the    18\n",
+      "97          your    21\n",
+      "54          with    22\n",
+      "50           i'm    23\n",
+      "72           and    23\n",
+      "0           love    25\n",
+      "65            in    27\n",
+      "121           my    33\n",
+      "56          come    37\n",
+      "126           on    40\n",
+      "\n",
+      "[140 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "df3=df.sort_values(by=['freq'])\n",
+    "print(df3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "s"
    ]
   }
  ],
@@ -190,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
