--- a/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sample_list_1= [20, 18, 15, 4, 66, 80, 65, 79, 85, 99, 68, 82, 94, 19, 34, 10, 12, 43, 29, 57, 2, 76, 46, 8, 51, 60, 93, 95, 11, 71, 21, 74, 3, 42, 22, 13, 62, 89, 52, 72, 28, 69, 92, 36, 84, 25, 77, 32, 63, 27, 26, 67, 45, 7, 49, 24, 31, 23, 47, 81, 87, 70, 58, 1, 35, 0, 37, 17, 48, 56, 14, 88, 41, 91, 97, 30, 98, 16, 96, 90]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sample_list_1=random.sample(range(100), k=80)\n",
+    "print(\"sample_list_1=\", sample_list_1)"
    ]
   },
   {
@@ -54,11 +64,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set1= {0, 1, 2, 3, 4, 7, 8, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 34, 35, 36, 37, 41, 42, 43, 45, 46, 47, 48, 49, 51, 52, 56, 57, 58, 60, 62, 63, 65, 66, 67, 68, 69, 70, 71, 72, 74, 76, 77, 79, 80, 81, 82, 84, 85, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sample_list_1= [20, 18, 15, 4, 66, 80, 65, 79, 85, 99, 68, 82, 94, 19, 34, 10, 12, 43, 29, 57, 2, 76, 46, 8, 51, 60, 93, 95, 11, 71, 21, 74, 3, 42, 22, 13, 62, 89, 52, 72, 28, 69, 92, 36, 84, 25, 77, 32, 63, 27, 26, 67, 45, 7, 49, 24, 31, 23, 47, 81, 87, 70, 58, 1, 35, 0, 37, 17, 48, 56, 14, 88, 41, 91, 97, 30, 98, 16, 96, 90]\n",
+    "print(\"set1=\", set(sample_list_1))"
    ]
   },
   {
@@ -77,11 +97,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sample_list_2= [31, 4, 53, 21, 33, 86, 26, 30, 94, 34, 20, 45, 33, 30, 98, 6, 23, 67, 35, 18, 11, 96, 15, 79, 8, 77, 86, 24, 69, 58, 6, 30, 75, 71, 50, 55, 33, 64, 80, 19, 48, 52, 43, 58, 75, 58, 96, 72, 72, 31, 26, 58, 23, 74, 42, 5, 45, 46, 54, 65, 94, 87, 68, 29, 67, 50, 40, 47, 76, 5, 48, 76, 95, 23, 96, 89, 2, 68, 97, 65]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sample_list_2=[]\n",
+    "for i in range(80):\n",
+    "    sample_list_2.append(random.randrange(0,101,1))\n",
+    "print(\"sample_list_2=\", sample_list_2)"
    ]
   },
   {
@@ -93,11 +125,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set2= {2, 4, 5, 6, 8, 11, 15, 18, 19, 20, 21, 23, 24, 26, 29, 30, 31, 33, 34, 35, 40, 42, 43, 45, 46, 47, 48, 50, 52, 53, 54, 55, 58, 64, 65, 67, 68, 69, 71, 72, 74, 75, 76, 77, 79, 80, 86, 87, 89, 94, 95, 96, 97, 98}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(\"set2=\", set(sample_list_2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "54\n"
+     ]
+    }
+   ],
+   "source": [
+    "set2= {2, 4, 5, 6, 8, 11, 15, 18, 19, 20, 21, 23, 24, 26, 29, 30, 31, 33, 34, 35, 40, 42, 43, 45, 46, 47, 48, 50, 52, 53, 54, 55, 58, 64, 65, 67, 68, 69, 71, 72, 74, 75, 76, 77, 79, 80, 86, 87, 89, 94, 95, 96, 97, 98}\n",
+    "print(len(set2))"
    ]
   },
   {
@@ -109,11 +168,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set3= {0, 1, 3, 7, 10, 12, 13, 14, 16, 17, 22, 25, 27, 28, 32, 36, 37, 41, 49, 51, 56, 57, 60, 62, 63, 66, 70, 81, 82, 84, 85, 88, 90, 91, 92, 93, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1= {0, 1, 2, 3, 4, 7, 8, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 34, 35, 36, 37, 41, 42, 43, 45, 46, 47, 48, 49, 51, 52, 56, 57, 58, 60, 62, 63, 65, 66, 67, 68, 69, 70, 71, 72, 74, 76, 77, 79, 80, 81, 82, 84, 85, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99}\n",
+    "set3 = set1.difference(set2)\n",
+    "    \n",
+    "print(\"set3=\",set3)"
    ]
   },
   {
@@ -125,11 +196,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set4= {64, 33, 5, 6, 40, 75, 50, 53, 54, 55, 86}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set4 = set2.difference(set1)\n",
+    "    \n",
+    "print(\"set4=\",set4)"
    ]
   },
   {
@@ -141,11 +223,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set5= {2, 4, 8, 11, 15, 18, 19, 20, 21, 23, 24, 26, 29, 30, 31, 34, 35, 42, 43, 45, 46, 47, 48, 52, 58, 65, 67, 68, 69, 71, 72, 74, 76, 77, 79, 80, 87, 89, 94, 95, 96, 97, 98}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set5= set1.intersection(set2)\n",
+    "print(\"set5=\", set5)"
    ]
   },
   {
@@ -165,11 +257,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n",
+      "54\n",
+      "37\n",
+      "11\n",
+      "43\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(len(set1))\n",
+    "print(len(set2))\n",
+    "print(len(set3))\n",
+    "print(len(set4))\n",
+    "print(len(set5))\n",
+    "\n",
+    "len(set1)>len(set2)>len(set3)>len(set4)<len(set5)"
    ]
   },
   {
@@ -185,7 +306,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6={}"
    ]
   },
   {
@@ -197,11 +319,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set6= {0, 1, 2, 3, 4, 7, 8, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 34, 35, 36, 37, 41, 42, 43, 45, 46, 47, 48, 49, 51, 52, 56, 57, 58, 60, 62, 63, 65, 66, 67, 68, 69, 70, 71, 72, 74, 76, 77, 79, 80, 81, 82, 84, 85, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set3.update(set5)\n",
+    "print(\"set6=\", set3)"
    ]
   },
   {
@@ -213,11 +345,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6= {0, 1, 2, 3, 4, 7, 8, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 34, 35, 36, 37, 41, 42, 43, 45, 46, 47, 48, 49, 51, 52, 56, 57, 58, 60, 62, 63, 65, 66, 67, 68, 69, 70, 71, 72, 74, 76, 77, 79, 80, 81, 82, 84, 85, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99}\n",
+    "if set1==set6:\n",
+    "    print (True)"
    ]
   },
   {
@@ -229,11 +372,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "a=set1.issubset(set2)\n",
+    "print(a)\n",
+    "b=set1.issubset(set3)\n",
+    "print(b)"
    ]
   },
   {
@@ -247,11 +403,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 4, 5, 6, 7, 8, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 40, 41, 42, 43, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 60, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 74, 75, 76, 77, 79, 80, 81, 82, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99}\n",
+      "{0, 1, 2, 3, 4, 5, 6, 7, 8, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 40, 41, 42, 43, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 60, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 74, 75, 76, 77, 79, 80, 81, 82, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99}\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set7 = set3.union(set4, set5)\n",
+    "print(set7)\n",
+    "set8 =set1.union(set2)\n",
+    "print(set8)\n",
+    "if set7==set8:\n",
+    "    print(True)"
    ]
   },
   {
@@ -263,11 +435,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 3, 4, 7, 8, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 34, 35, 36, 37, 41, 42, 43, 45, 46, 47, 48, 49, 51, 52, 56, 57, 58, 60, 62, 63, 65, 66, 67, 68, 69, 70, 71, 72, 74, 76, 77, 79, 80, 81, 82, 84, 85, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1.pop()\n",
+    "print(set1)"
    ]
   },
   {
@@ -283,12 +465,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 3, 4, 7, 8, 10, 12, 13, 14, 15, 16, 17, 18, 20, 22, 23, 24, 25, 26, 27, 28, 30, 32, 34, 35, 36, 37, 42, 43, 45, 46, 47, 48, 52, 56, 57, 58, 60, 62, 63, 65, 66, 67, 68, 70, 72, 74, 76, 77, 80, 82, 84, 85, 87, 88, 90, 92, 93, 94, 95, 96, 97, 98}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "\n",
+    "for e in list_to_remove:\n",
+    "    if e in set1:\n",
+    "        set1.remove(e)\n",
+    "print(set1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -307,7 +519,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
