--- a/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
@@ -19,7 +19,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup = (\"I\",)"
    ]
   },
   {
@@ -33,11 +34,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup = (\"I\",)\n",
+    "type(tup)"
    ]
   },
   {
@@ -55,13 +69,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
+    "tup = (\"I\",)\n",
+    "tup_tu = (\"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\")\n",
     "\n",
-    "# Your explanation here\n"
+    "tup += tup_tu\n",
+    "\n",
+    "print(tup)\n",
+    "          \n",
+    "# Your explanation here\n",
+    "# Tomando como referencia la variable tup (tuple) de la celda anterior, se crea un nuevo tuple con los\n",
+    "# elementos a añadir.\n",
+    "# Tras esto, se opera con los tuples sumando sobre el primero (tup) los elementos que componen el segundo (tup_tu)"
    ]
   },
   {
@@ -79,11 +110,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
+    "\n",
+    "tup = (\"h\", \"a\", \"c\", \"k\")\n",
+    "print(tup)\n",
     "\n",
     "# Your explanation here\n"
    ]
@@ -103,11 +145,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n')\n",
+      "('h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "\n",
+    "tup = (\"I\",)\n",
+    "tup_tu = (\"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\")\n",
+    "\n",
+    "tup += tup_tu\n",
+    "\n",
+    "tup1 = (tup[:4])\n",
+    "tup2 = (tup[4:])\n",
+    "\n",
+    "\n",
+    "print(tup1)\n",
+    "print(tup2)"
    ]
   },
   {
@@ -121,11 +185,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup = (\"I\",)\n",
+    "tup_tu = (\"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\")\n",
+    "\n",
+    "tup += tup_tu\n",
+    "\n",
+    "tup1 = (tup[:4])\n",
+    "tup2 = (tup[4:])\n",
+    "\n",
+    "tup3 = tup1 + tup2\n",
+    "print(tup3)\n",
+    "\n",
+    "tup3 == tup\n",
+    "\n"
    ]
   },
   {
@@ -137,11 +232,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "len(tup1)\n",
+    "len(tup2)\n",
+    "\n",
+    "if (len(tup1) + len(tup2)) == len(tup3):\n",
+    "    print(\"True\")"
    ]
   },
   {
@@ -153,11 +262,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "tup3.index(\"h\")"
    ]
   },
   {
@@ -177,11 +299,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "tup1 = (tup[:4])\n",
+    "tup2 = (tup[4:])\n",
+    "tup3 = tup1 + tup2\n",
+    "\n",
+    "for i in letters:\n",
+    "    if i in tup3:\n",
+    "        print(\"True\")\n",
+    "    else:\n",
+    "        print(\"False\")\n",
+    "\n",
+    "\n",
+    "        \n"
    ]
   },
   {
@@ -195,12 +343,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "\n",
+    "for i in letters:\n",
+    "    p=tup3.count(i)\n",
+    "    print(p)    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -219,7 +397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
