added solutions to challenges 2 and 3

--- a/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 53, 47, 77, 23, 35, 95, 15, 89, 97, 3, 88, 74, 27, 42, 10, 64, 66, 61, 75, 63, 69, 100, 0, 99, 68, 41, 30, 40, 13, 8, 38, 72, 56, 6, 73, 50, 94, 11, 85, 1, 62, 80, 59, 5, 46, 20, 83, 16, 57, 91, 24, 96, 52, 37, 25, 55, 54, 26, 18, 32, 87, 22, 67, 93, 84, 14, 76, 71, 79, 86, 7, 82, 34, 90, 29, 49, 36, 58, 70]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sample_list_1=random.sample(range(101),80)\n",
+    "print(sample_list_1)"
    ]
   },
   {
@@ -54,11 +64,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1=set(sample_list_1)\n",
+    "print(len(set1))"
    ]
   },
   {
@@ -77,11 +97,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[54, 24, 96, 41, 21, 91, 59, 33, 10, 72, 67, 17, 66, 80, 86, 60, 86, 44, 76, 18, 20, 56, 49, 87, 91, 11, 68, 29, 16, 83, 64, 18, 5, 59, 84, 78, 43, 46, 55, 54, 84, 18, 53, 66, 63, 7, 38, 43, 47, 81, 5, 2, 30, 91, 94, 47, 5, 51, 28, 77, 1, 82, 43, 48, 58, 17, 58, 71, 100, 99, 53, 93, 54, 100, 15, 10, 81, 53, 29, 22]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sample_list_2 = [random.choice(range(101)) for i in range(80)]\n",
+    "    \n",
+    "print(sample_list_2)\n"
    ]
   },
   {
@@ -93,11 +124,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "57\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set2=set(sample_list_2)\n",
+    "print(len(set2))\n"
    ]
   },
   {
@@ -109,11 +150,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 3, 4, 6, 8, 13, 14, 23, 25, 26, 27, 32, 34, 35, 36, 37, 40, 42, 50, 52, 57, 61, 62, 69, 70, 73, 74, 75, 79, 85, 88, 89, 90, 95, 97}\n",
+      "35\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set3=set1.difference(set2)\n",
+    "print(set3)\n",
+    "print(len(set3))\n"
    ]
   },
   {
@@ -125,11 +178,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{33, 2, 43, 44, 60, 78, 48, 17, 81, 51, 21, 28}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set4=set2.difference(set1)\n",
+    "print(set4)\n"
    ]
   },
   {
@@ -141,11 +204,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 5, 7, 10, 11, 15, 16, 18, 20, 22, 24, 29, 30, 38, 41, 46, 47, 49, 53, 54, 55, 56, 58, 59, 63, 64, 66, 67, 68, 71, 72, 76, 77, 80, 82, 83, 84, 86, 87, 91, 93, 94, 96, 99, 100}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set5=set1.intersection(set2)\n",
+    "print(set5)"
    ]
   },
   {
@@ -165,11 +238,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "#set1 must be longer than set2, because the list that generates set1 doesn't have any duplicates:\n",
+    "print(len(set1) > len (set2))\n",
+    "#set3 must be shorter than set1 and set2, since it only includes the elements present in set1 but not in set2:\n",
+    "print((len(set3) < len(set1)) and (len(set3) < len(set2)))\n",
+    "#set4 must be shorter than set1 and set2, since it only includes the elements present in set2 but not in set1:\n",
+    "print((len(set4) < len(set1)) and (len(set4) < len(set2)))\n",
+    "#set5 must be shorter than set1 and set2, since it only includes the common elements between set1 and set2:\n",
+    "print((len(set5) < len(set1)) and (len(set5) < len(set2)))"
    ]
   },
   {
@@ -181,11 +273,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6=set()"
    ]
   },
   {
@@ -197,11 +290,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 3, 4, 5, 6, 7, 8, 10, 11, 13, 14, 15, 16, 18, 20, 22, 23, 24, 25, 26, 27, 29, 30, 32, 34, 35, 36, 37, 38, 40, 41, 42, 46, 47, 49, 50, 52, 53, 54, 55, 56, 57, 58, 59, 61, 62, 63, 64, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 79, 80, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 93, 94, 95, 96, 97, 99, 100}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6.update(set3,set5)\n",
+    "print(set6)"
    ]
   },
   {
@@ -213,11 +316,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1 == set6"
    ]
   },
   {
@@ -229,11 +344,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(set2.issubset(set1))\n",
+    "print(set3.issubset(set1))"
    ]
   },
   {
@@ -247,11 +373,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set123=set3.union(set4.union(set5))\n",
+    "set12=set1.union(set2)\n",
+    "print(set123 == set12)"
    ]
   },
   {
@@ -263,11 +400,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 3, 4, 5, 6, 7, 8, 10, 11, 13, 14, 15, 16, 18, 20, 22, 23, 24, 25, 26, 27, 29, 30, 32, 34, 35, 36, 37, 38, 40, 41, 42, 46, 47, 49, 50, 52, 53, 54, 55, 56, 57, 58, 59, 61, 62, 63, 64, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 79, 80, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 93, 94, 95, 96, 97, 99, 100}\n",
+      "0\n",
+      "{1, 3, 4, 5, 6, 7, 8, 10, 11, 13, 14, 15, 16, 18, 20, 22, 23, 24, 25, 26, 27, 29, 30, 32, 34, 35, 36, 37, 38, 40, 41, 42, 46, 47, 49, 50, 52, 53, 54, 55, 56, 57, 58, 59, 61, 62, 63, 64, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 79, 80, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 93, 94, 95, 96, 97, 99, 100}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(set1)\n",
+    "set1pop=set1.pop()\n",
+    "print(set1pop)\n",
+    "print(set1)\n",
+    "#sets are unordered, therefore it's not possible to know which element will be removed by using the pop \n"
    ]
   },
   {
@@ -283,12 +435,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 3, 4, 5, 6, 7, 8, 10, 11, 13, 14, 15, 16, 18, 20, 22, 23, 24, 25, 26, 27, 29, 30, 32, 34, 35, 36, 37, 38, 40, 41, 42, 46, 47, 49, 50, 52, 53, 54, 55, 56, 57, 58, 59, 61, 62, 63, 64, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 79, 80, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 93, 94, 95, 96, 97, 99, 100}\n",
+      "{3, 4, 5, 6, 7, 8, 10, 13, 14, 15, 16, 18, 20, 22, 23, 24, 25, 26, 27, 30, 32, 34, 35, 36, 37, 38, 40, 42, 46, 47, 50, 52, 53, 54, 55, 56, 57, 58, 62, 63, 64, 66, 67, 68, 70, 72, 73, 74, 75, 76, 77, 80, 82, 83, 84, 85, 86, 87, 88, 90, 93, 94, 95, 96, 97, 100}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "print(set1)\n",
+    "for e in list_to_remove:\n",
+    "    set1.discard(e)\n",
+    "print(set1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -307,7 +480,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
