--- a/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -317,10 +317,18 @@
    "source": [
     "# Your code here\n",
     "for e in letters:\n",
-    "    x = list_tup3.count (e)\n",
-    "    print (e,\"-\",x)\n",
-    "    \n"
+    "    print (e, \"-\", tup3.count(e))\n",
+    "    \n",
+    "\n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
